--- a/data/participation_access.yml
+++ b/data/participation_access.yml
@@ -127,4 +127,4 @@ content:
     notes: |
         Some countries provide incentives to lobbyists, such as access cards, invitations, or privileged access to meetings: “A lobbyist entered in the register of lobbyists in the Republic of Slovenia shall have the right to be invited to all public presentations and all forms of public consultations with regard to the areas in which he has registered an interest, and shall be informed thereof by the State bodies and local communities.”[^70] However, such provisions raise the constitutional question of **equal treatment**: In principle, citizens should have the same rights as lobbyists, for example they should be able to receive notifications of public consultations in their fields of interests.
         
-        [^70]: Article 67 para. 2 Integrity and Prevention of Corruption Act (Slovenia), [www.kpk-rs.si/upload/datoteke/ZintPK-ENG.pdf](www.kpk-rs.si/upload/datoteke/ZintPK-ENG.pdf).
+        [^70]: Article 67 para. 2 Integrity and Prevention of Corruption Act (Slovenia), [www.kpk-rs.si/upload/datoteke/ZintPK-ENG.pdf](https://www.kpk-rs.si/upload/datoteke/ZintPK-ENG.pdf).
